Replaces immutable collection creation with collection factory call.